bug fixed(not showing PlaceList) + filtering by using useParams + custom Buttons

--- a/src/user/components/UserItem.css
+++ b/src/user/components/UserItem.css
@@ -21,7 +21,7 @@
 }
 
 .user-item__content {
-  padding: 0;
+  padding: 0rem;
 }
 
 .user-item__image {
